--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>About photo</title>
     <link rel="stylesheet" href="Stylepixi.css">
     <script src="Show.script.js"> </script>
 </head>
@@ -31,4 +31,5 @@
     </div>
 </div>
 </body>
+     <!-----footer--------->
 </html>
